added API instead object

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="header__container">
       <img src="./img/LOGO.svg" alt="Logo" class="header__logo">
       <form class="header__search search">
-        <input type="search" class="search__input">
+        <input type="search" class="search__input" name="search">
         <button class="search__btn">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path
